# hough_function

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  README.md  cheb_boyd.m
docs/: README.md  reference.md
fortran/: CMakeLists.txt  README.md
fortran/scripts/: plot_paper_figures.py  plot_uv_modes.py  run_paper_cases.sh
fortran/src/: eigensolvers.f90  hough_main.f90  hough_mode.f90  hough_mode_uv.f90  jacobi_eigenvalue.f90  legendre_polynomial_sub.f90  theta_to_theta_uv.f90
matlab/: cheb_hough.m  nalp_hough.m
python/: README.md  pyproject.toml
python/examples/: paper_figures.py  plot_modes.py
python/hough/: __init__.py  cheb_boyd.py  cheb_hough.py  nalp_hough.py  utils.py
python/scripts/: plot_modes.py  plot_paper_figures.py  plot_uv_modes.py
python/tests/: test_cross_check.py
