[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hough"
version = "0.1.0"
description = "Compute Hough functions via Chebyshev collocation and normalized associated Legendre polynomials (Wang, Boyd & Akmaev, 2016)"
readme = "../README.md"
requires-python = ">=3.8"
license = { text = "CC-BY-4.0" }
dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.3",
]

[project.optional-dependencies]
test = ["pytest>=6.0"]

[tool.setuptools]
packages = ["hough"]

[tool.pytest.ini_options]
testpaths = ["tests"]
